template/discuzx5/common/extend_common.css
/* ... */
.dz_layer_nav ul li a:hover{color:var(--dz-nvtxt);}
.dz_layer_nav ul li.a a{color:var(--dz-nvtxt);}
.dz_layer_nav span{display:none;}
.dz_layer_nav ul li.hover{color:var(--dz-nvtxt);}
.dz_layer_nav ul li.hover a{color:var(--dz-nvtxt);}
.dz_layer_nav ul li a:before{content:'';background:var(--dz-nvtxt);height:2px;bottom:8px;width:0;position:absolute;left:40%;width:0px;transition:all 0.4s;border-radius:24px 0 0 24px;}
.dz_layer_nav ul li a:after{content:'';background:var(--dz-nvtxt);height:2px;bottom:8px;width:0;position:absolute;right:40%;width:0px;transition:all 0.4s;border-radius:0 24px 24px 0;}
.dz_layer_nav ul li.a a:before{width:15%;}
.dz_layer_nav ul li.a a:after{width:15%;}
.dz_layer_nav ul li a:hover:before{width:60%;}
.dz_layer_nav ul li a:hover:after{width:60%;}

.dz_menumore::after{vertical-align: -8px;color: var(--dz-alink);content: "";border-top: 6px solid;border-right: 6px solid transparent;border-bottom: 0;border-left: 6px solid transparent;border-radius: var(--dz-radius-x);}
.dz_layer_nav ul .dz_menumore a{font-size: 16px;margin-right: 10px;}


.dz_nav .dz_nav_logo {float:left;height: 73px;margin-right: 15px; position: relative;display: flex;align-items: center;justify-content: space-between;}
.dz_nav .dz_nav_logo img {width:140px;height:36px;float: left;}
.dz_nav .dz_nav_logo .dz_nav_logo_txt{float: left; height: 48px;line-height: 48px;font-size: 18px;color: #000;letter-spacing: 0.4px;}

.header-right{height:70px;display:flex;align-items:center;position: relative;}
/* */
.header-searcher{position:relative;display:inline-block;margin-right: 1rem;}
.header-searcher .searcher-wrap{position:relative}
.header-searcher .algolia-search-box-wrapper{position:relative}
.header-searcher .search-input, .header-searcher .ais-SearchBox-input{padding-left:12px;width:356px;height:32px;font-size:14px;background:var(--dz-bgc);border:1px solid var(--dz-borderb);border-radius:var(--dz-radius-c)}
.header-searcher .search-input::placeholder, .header-searcher .ais-SearchBox-input::placeholder{color:var(--dz-fb)}
.header-searcher .search-input:hover, .header-searcher .ais-SearchBox-input:hover{border:1px solid #dadfe6}
.header-searcher .search-input:focus, .header-searcher .ais-SearchBox-input:focus{border:1px solid #dadfe6;background-color:var(--dz-ff);outline:none}
.header-searcher #algolia-search-box:empty{display:block;width:356px;height:32px;border:1px solid var(--dz-borderb);border-radius:var(--dz-radius-c);background:var(--dz-bgc) url({STYLEIMGDIR}/svg/search.svg) no-repeat calc(100% - 10px) center;background-size:16px}
.header-searcher .ais-SearchBox-form{display:block;position:relative}
.header-searcher .ais-SearchBox-submit[hidden], .header-searcher .ais-SearchBox-reset[hidden], .header-searcher .ais-SearchBox-loadingIndicator[hidden]{display:none}
.header-searcher #algolia-powered-by{position:absolute;top:42px;right:0;font-size:12px;text-align:right}
.header-searcher .ais-Stats{position:absolute;top:42px;left:0;font-size:12px;color:var(--dz-fc)}

#ais-wrapper{display:flex;flex-direction:row;margin-top:10px;background:var(--dz-bgf);border:1px solid var(--dz-borderb);border-radius:var(--dz-radius-m);box-shadow:var(--dz-shadow)}
#ais-main{padding:1rem;flex:1}
#ais-facets{width:40%;padding:1rem 1rem 1rem 0}
.widgettitle{margin-top:2rem}
.ais-facets{padding:0}
.ais-facets ul{list-style:none;padding-left:0;margin-left:0}
.ais-facets li{margin-left:0}
.ais-Hits-list{list-style:none;padding-left:0;margin:0}
.ais-Pagination-list{display:flex;gap:8px;list-style:none;padding-left:0}
.ais-Pagination-item--selected a{color:var(--dz-ahot)}
.ais-SearchBox-input{box-sizing:border-box}
.ais-ClearRefinements-button{width:30px;height:30px;display:flex;justify-content:center;align-items:center}

@media screen and (max-width: 1366px){
    .header-searcher .search-input, .header-searcher .ais-SearchBox-input, .header-searcher #algolia-search-box:empty {
        width: 160px;
    }
    .dz_layer_nav{width: 530px;}
    .header-indexsearcher{margin-left: 107px;}
}
@media screen  and (min-width:960px) and  (max-width: 1440px){
    .header-searcher .search-input, .header-searcher .ais-SearchBox-input, .header-searcher #algolia-search-box:empty {
        width: 180px;
    }
    .dz_layer_nav{width: 530px;}
    .header-indexsearcher{margin-left: 107px;}
}
@media screen and (min-width:1440px) and  (max-width: 1920px){
    .header-indexsearcher{margin-left: 407px;}
}
@media screen and  (min-width: 1920px){
    .header-indexsearcher{margin-left: 407px;}
}
/* */
.header-login{display:flex;align-items:center}
.header-login a:first-child{margin-left:0}
.header-login a{font-size:14px;font-weight:400;color:#494b4d;max-width:60px;margin-left:5px;text-overflow:ellipsis;white-space:nowrap;overflow:hidden}
.header-login .break{background-color:#c0c5cc;width:1px;height:12px;margin: 0 5px 0 10px;}

/* */
.header-client, .header-notice,.header-i18n{display:flex;align-items:center;margin-right: 12px;position:relative;height:60px}
.header-client .client-dropdown{display:none;top:55px;right:-45px;}
.header-client.open .client-dropdown{display:block}
.header-client .client-icon{display: flex; align-items: center;font-size:12px;font-weight:400;color:#494b4d;padding:6px;cursor: pointer;}
.header-client .client-icon:hover, .header-client.open .client-icon{background-color:var(--dz-borderb);border-radius:18px;}
.header-client .client-content{background:var(--dz-bgf); background-clip: padding-box;border-radius: 4px;white-space: nowrap; padding: 10px; }
.header-client .client-content img{width:100px;height:100px}
.header-client .client-content .client-text{text-align:center;font-size:12px;font-weight:400;color:#494b4d;margin-top:5px;letter-spacing:4px}

/* */
.header-notice .poptip-popper .poptip-arrow{right: 22px;}
.header-notice .notice-dropdown{display:none;top:55px;right:-6px;}
.header-notice.open .notice-dropdown{display:block}
/* ... */

